crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_sort_within_sections_force_sort_within_sections_future.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> force_sort_within_sections_future.py:1:1
  |
1 | / import __future__
2 | | from __future__ import annotations
  | |__________________________________^
help: Organize imports
  |
1 + from __future__ import annotations
2 + import __future__
  |
