crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_sort_within_sections_force_sort_within_sections_with_as_names.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> force_sort_within_sections_with_as_names.py:1:1
  |
1 | / import encodings
2 | | from datetime import timezone as tz
3 | | from datetime import timedelta
4 | | import datetime as dt
5 | | import datetime
  | |_______________^
help: Organize imports
  |
1 + import datetime
2 + import datetime as dt
3 + from datetime import timedelta
4 + from datetime import timezone as tz
5 + import encodings
  |
