crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_sort_within_sections_lazy_force_sort_within_sections.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> lazy_force_sort_within_sections.py:1:1
  |
1 | / lazy from math import pi
2 | | from math import pi
3 | | lazy import os
4 | | import os
  | |_________^
help: Organize imports
  |
1 + from math import pi
2 + import os
3 + lazy from math import pi
4 + lazy import os
  |
