crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_to_top_force_to_top.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> force_to_top.py:1:1
   |
 1 | / import lib6
 2 | | import lib2
 3 | | import lib5
 4 | | import lib1
 5 | | import lib3
 6 | | import lib4
 7 | |
 8 | | import foo
 9 | | import z
10 | | from foo import bar
11 | | from lib1 import foo
12 | | from lib2 import foo
13 | | from lib1.lib2 import foo
14 | | from foo.lib1.bar import baz
15 | | from lib4 import lib1
16 | | from lib5 import lib2
17 | | from lib4 import lib2
18 | | from lib5 import lib1
19 | |
20 | | import lib3.lib4
21 | | import lib3.lib4.lib5
22 | | from lib3.lib4 import foo
23 | | from lib3.lib4.lib5 import foo
   | |______________________________^
help: Organize imports
   |
 1 + import lib1
 2 + import lib3
 3 + import lib3.lib4
 4 + import lib5
 5 + import z
 6 + import foo
 7 + import lib2
 8 + import lib3.lib4.lib5
 9 + import lib4
10 + import lib6
11 + from lib1 import foo
12 + from lib3.lib4 import foo
13 + from lib5 import lib1, lib2
14 + from foo import bar
15 + from foo.lib1.bar import baz
16 + from lib1.lib2 import foo
17 + from lib2 import foo
18 + from lib3.lib4.lib5 import foo
19 + from lib4 import lib1, lib2
   |
