crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__forced_separate.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> forced_separate.py:3:1
  |
1 |   # office_helper and tests are both first-party,
2 |   # but we want tests and experiments to be separated, in that order
3 | / from office_helper.core import CoreState
4 | | import tests.common.foo as tcf
5 | | from tests.common import async_mock_service
6 | | from experiments.starry import *
7 | | from experiments.weird import varieties
8 | | from office_helper.assistants import entity_registry as er
  | |__________________________________________________________^
help: Organize imports
   |
 3 + from office_helper.assistants import entity_registry as er
 4 + from office_helper.core import CoreState
 5 + 
 6 + import tests.common.foo as tcf
 7 + from tests.common import async_mock_service
 8 + 
 9 + from experiments.starry import *
10 + from experiments.weird import varieties
   |
